--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ss-vue-client</title>
     <script src="/static/gt.js"></script>
   </head>
-  <body>
+  <body style="margin:0">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
