--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN" class="">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>ss-vue-client</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="google" content="notranslate">
+    <title>尼诺的博客 </title>
+    <meta name="keywords" content="素锦, inspiration, customization, rainmeter, design, web, 壁纸, 设计, 收集, wallpaper, collection, jaku, icon">
+    <meta name="description" content="世界上每个角落都有人过着相似的人生">
+    <meta name="author" content="LoeiFy">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/src/assets/images/144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/src/assets/images/114.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/src/assets/images/72.png">
+    <link rel="apple-touch-icon-precomposed" href="/src/assets/images/57.png">
+    <link rel="icon" type="image/png" href="/src/assets/images/32.png">
+    <style>
+      .image-logo{background-image:url(src/assets/images/logo1.png)}body.mu .image-logo{background-image:url(src/assets/images/logo_black.png)}.image-icon{background-image:url(src/assets/images/logo_min.png)}
+    </style>
     <script src="/static/gt.js"></script>
   </head>
-  <body style="margin:0">
-    <div id="app"></div>
+  <body class="touch">
+    <div id="app">
+    </div>
+    <script src="/static/jquery.min.js"></script>
+    <script src="/static/plugin.js"></script>
+    <script src="/static/Diaspora.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
