--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </style>
     <script src="/static/gt.js"></script>
   </head>
-  <body>
+  <body class="touch">
     <div id="app">
     </div>
     <script src="/static/jquery.min.js"></script>
