--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/src/assets/images/72.png">
     <link rel="apple-touch-icon-precomposed" href="/src/assets/images/57.png">
     <link rel="icon" type="image/png" href="/src/assets/images/32.png">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/hybrid.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/mavon-editor@2.5.3/dist/css/index.css">
     <style>
       .image-logo{background-image:url(src/assets/images/logo1.png)}body.mu .image-logo{background-image:url(src/assets/images/logo_black.png)}.image-icon{background-image:url(src/assets/images/logo_min.png)}
     </style>
@@ -25,6 +27,14 @@
     </div>
     <script src="/static/jquery.min.js"></script>
     <script src="/static/plugin.js"></script>
+    <script src="https://unpkg.com/vue@2.5.2/dist/vue.min.js"></script>
+    <script src="https://unpkg.com/vuex@3.0.1/dist/vuex.min.js"></script>
+    <script src="https://unpkg.com/vue-router@3.0.1/dist/vue-router.min.js"></script>
+    <script src="https://unpkg.com/axios@0.18.0/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/mavon-editor@2.5.3/dist/mavon-editor.js"></script>
+    <script src="https://unpkg.com/vue-infinite-scroll@2.0.2/vue-infinite-scroll.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+    <script >hljs.initHighlightingOnLoad();</script>
     <!-- built files will be auto injected -->
   </body>
 </html>
