--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="google" content="notranslate">
-    <title>尼诺的博客 </title>
+    <title>尼诺的博客 ---- 人生就是激流勇进，不进则退。</title>
     <meta name="keywords" content="素锦, inspiration, customization, rainmeter, design, web, 壁纸, 设计, 收集, wallpaper, collection, jaku, icon">
     <meta name="description" content="世界上每个角落都有人过着相似的人生">
     <meta name="author" content="LoeiFy">
@@ -31,7 +31,6 @@
     <script src="https://unpkg.com/vuex@3.0.1/dist/vuex.min.js"></script>
     <script src="https://unpkg.com/vue-router@3.0.1/dist/vue-router.min.js"></script>
     <script src="https://unpkg.com/axios@0.18.0/dist/axios.min.js"></script>
-    <script src="https://unpkg.com/mavon-editor@2.5.3/dist/mavon-editor.js"></script>
     <script src="https://unpkg.com/vue-infinite-scroll@2.0.2/vue-infinite-scroll.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
     <script >hljs.initHighlightingOnLoad();</script>
